config updates (WIP)

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,5 @@
 {
-    "powershell.integratedConsole.showOnStartup": true
+    "powershell.integratedConsole.showOnStartup": false,
+    "suggest.enablePreview": true,
+    "suggest.noselect": false,
 }
